<resources>
    <string name="app_name">IPTV Player+</string>
    <string name="title_home">Home</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_playlist_page">My channels</string>
    <string name="title_settings">Settings</string>
    <string name="spacer_myChannels">My streams</string>
    <string name="dialogHint_name">Title</string>
    <string name="dialogHint_url">http://31.134.126.6/stream?id=3456</string>
    <string name="settings_notification">Push Notification</string>
    <string name="settings_notification_des">Receive notifications about service</string>
    <string name="settings_clear">Clear Data</string>
    <string name="settings_clear_des">Delete all recent channels</string>
    <string name="settings_appearance">Dark mode</string>
    <string name="settings_appearance_des">Switch to the dark theme mode</string>
    <string name="spacer_general">GENERAL</string>
    <string name="spacer_more">MORE</string>
    <string name="spacer_appearance">APPEARANCE</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_version">Version</string>
    <string name="current_version">1.1</string>
    <string name="add_button">Add new stream</string>
    <string name="title_player">Player</string>
    <string name="player_button_text">\u2190</string>
    <string name="remove_button">x</string>
</resources>
